WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248475
[css-grid] Fix initial masonry implementation
https://bugs.webkit.org/show_bug.cgi?id=248475
Summary
[css-grid] Fix initial masonry implementation
Sammy Gill
Reported
2022-11-29 10:21:18 PST
Accidentally unsafe merge queued with a build error. Fixing compile errors and trying to land
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-29 10:21:45 PST
<
rdar://problem/102772770
>
Sammy Gill
Comment 2
2022-11-29 14:21:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6940
EWS
Comment 3
2022-11-30 10:49:53 PST
Committed
257185@main
(aeadced20ec6): <
https://commits.webkit.org/257185@main
> Reviewed commits have been landed. Closing PR #6940 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug