Source/WebCore/rendering/style/GridPositionsResolver.h
@@ -94,6 +94,7 @@ public:
     static GridSpan resolveGridPositionsFromStyle(const RenderGrid& gridContainer, const RenderBox&, GridTrackSizingDirection);
     static unsigned explicitGridColumnCount(const RenderGrid&);
     static unsigned explicitGridRowCount(const RenderGrid&);
+    static inline GridTrackSizingDirection gridAxisDirection(GridTrackSizingDirection masonryAxisDirection) { return masonryAxisDirection == ForRows ? ForColumns: ForRows; }
 };
 
 } // namespace WebCore
